package service

import (
	"errors"
)

// URLService provides URL shortening functionality
type URLService struct {
	// Dependencies like database client, cache, etc. would be injected here
}

// NewURLService creates a new URL service
func NewURLService() *URLService {
	return &URLService{}
}

// ShortenURL creates a short URL from the original URL
func (s *URLService) ShortenURL(originalURL string) (string, error) {
	// TODO: Implement actual shortening logic, possibly calling the gRPC service
	// This is a mock implementation for now
	if originalURL == "" {
		return "", errors.New("original URL cannot be empty")
	}

	return "abc123", nil
}

// ExpandURL resolves a short URL to its original URL
func (s *URLService) ExpandURL(shortID string) (string, error) {
	// TODO: Implement actual expansion logic, possibly calling the gRPC service
	// This is a mock implementation for now
	if shortID == "" {
		return "", errors.New("short ID cannot be empty")
	}

	return "https://example.com/original-url", nil
}
